@@ -6,7 +6,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 import com.google.common.base.Objects;
 import com.google.common.collect.Lists;
@@ -32,7 +31,7 @@ import static no.nav.melosys.eessi.models.sed.Konstanter.DEFAULT_SED_VER;
  */
 public interface SedMapper {
     default SED mapTilSed(SedDataDto sedData) {
-        SED sed = new SED();
+        var sed = new SED();
 
         sed.setNav(prefillNav(sedData));
         sed.setSedType(getSedType().name());
@@ -45,7 +44,7 @@ public interface SedMapper {
     SedType getSedType();
 
     default Nav prefillNav(SedDataDto sedData) {
-        Nav nav = new Nav();
+        var nav = new Nav();
 
         nav.setBruker(hentBruker(sedData));
         nav.setArbeidssted(hentArbeidssted(sedData));
@@ -60,7 +59,7 @@ public interface SedMapper {
     }
 
     default Bruker hentBruker(SedDataDto sedDataDto) {
-        Bruker bruker = new Bruker();
+        var bruker = new Bruker();
         bruker.setPerson(hentPerson(sedDataDto));
         bruker.setAdresse(hentAdresser(sedDataDto));
         setFamiliemedlemmer(sedDataDto, bruker);
@@ -68,35 +67,45 @@ public interface SedMapper {
     }
 
     default Person hentPerson(SedDataDto sedData) {
-        Person person = new Person();
+        var person = new Person();
 
         person.setFornavn(sedData.getBruker().getFornavn());
         person.setEtternavn(sedData.getBruker().getEtternavn());
         person.setFoedselsdato(formaterDato(sedData.getBruker().getFoedseldato()));
         person.setFoedested(null); //det antas at ikke trengs når NAV fyller ut.
-        person.setKjoenn(sedData.getBruker().getKjoenn());
-
-        Statsborgerskap statsborgerskap = new Statsborgerskap();
-        statsborgerskap.setLand(LandkodeMapper.getLandkodeIso2(sedData.getBruker().getStatsborgerskap()));
-
-        person.setStatsborgerskap(Collections.singletonList(statsborgerskap));
-
+        person.setKjoenn(Kjønn.valueOf(sedData.getBruker().getKjoenn()));
+        person.setStatsborgerskap(hentStatsborgerskap(sedData));
         person.setPin(hentPin(sedData));
 
         return person;
+    }
+
+    default List<Statsborgerskap> hentStatsborgerskap(SedDataDto sedDataDto) {
+        final List<Statsborgerskap> statsborgerskapList = sedDataDto.getBruker().getStatsborgerskap().stream()
+            .filter(landkodeIso3 -> LandkodeMapper.finnLandkodeIso2(landkodeIso3).isPresent())
+            .map(this::lagStatsborgerskap)
+            .toList();
+        if (statsborgerskapList.isEmpty()) {
+            throw new MappingException("Statsborgerskap er påkrevd.");
+        }
+        return statsborgerskapList;
+    }
+
+    private Statsborgerskap lagStatsborgerskap(String landkode) {
+        return new Statsborgerskap(LandkodeMapper.mapTilLandkodeIso2(landkode));
     }
 
     default List<Pin> hentPin(SedDataDto sedData) {
         List<Pin> pins = Lists.newArrayList();
 
         pins.add(new Pin(
-                sedData.getBruker().getFnr(), "NO",
-                null)); //null settes for sektor per nå. Ikke påkrevd. Evt hardkode 'alle'
+            sedData.getBruker().getFnr(), "NO",
+            null)); //null settes for sektor per nå. Ikke påkrevd. Evt hardkode 'alle'
 
         for (Ident utenlandskIdent : sedData.getUtenlandskIdent()) {
             pins.add(
-                    new Pin(utenlandskIdent.getIdent(),
-                            LandkodeMapper.getLandkodeIso2(utenlandskIdent.getLandkode()), null)
+                new Pin(utenlandskIdent.getIdent(),
+                    LandkodeMapper.mapTilLandkodeIso2(utenlandskIdent.getLandkode()), null)
             );
         }
 
@@ -118,26 +127,21 @@ public interface SedMapper {
     }
 
     private Adresse mapBostedsadresse(no.nav.melosys.eessi.controller.dto.Adresse adresse) {
-        Adresse bostedsadresse = mapAdresse(adresse);
-        // ref: punkt 2.1.1 (A001) https://confluence.adeo.no/display/TEESSI/Mapping+av+lovvalgs+SED+til+Melosys+domenemodell
+        var bostedsadresse = mapAdresse(adresse);
         if (adresse.getAdressetype() == Adressetype.BOSTEDSADRESSE) {
-            if ("NO".equalsIgnoreCase(bostedsadresse.getLand())) {
-                bostedsadresse.setType(Adressetype.BOSTEDSADRESSE.getAdressetypeRina());
-            } else {
-                bostedsadresse.setType(Adressetype.POSTADRESSE.getAdressetypeRina());
-            }
+            bostedsadresse.setType(Adressetype.BOSTEDSADRESSE.getAdressetypeRina());
         }
         return bostedsadresse;
     }
 
     private Adresse mapAdresse(no.nav.melosys.eessi.controller.dto.Adresse adresse) {
-        Adresse bostedsadresse = new Adresse();
+        var bostedsadresse = new Adresse();
         bostedsadresse.setType(adresse.getAdressetype().getAdressetypeRina());
         bostedsadresse.setGate(adresse.getGateadresse());
         bostedsadresse.setBy(adresse.getPoststed());
         bostedsadresse.setPostnummer(adresse.getPostnr());
         bostedsadresse.setRegion(adresse.getRegion());
-        bostedsadresse.setLand(LandkodeMapper.getLandkodeIso2(adresse.getLand()));
+        bostedsadresse.setLand(LandkodeMapper.mapTilLandkodeIso2(adresse.getLand()));
         return bostedsadresse;
     }
 
@@ -145,11 +149,11 @@ public interface SedMapper {
 
         //Splitter per nå navnet etter første mellomrom
         Optional<FamilieMedlem> optionalFar = sedData.getFamilieMedlem().stream()
-                .filter(f -> f.getRelasjon().equalsIgnoreCase("FAR")).findFirst();
+            .filter(f -> f.getRelasjon().equalsIgnoreCase("FAR")).findFirst();
 
         if (optionalFar.isPresent()) {
-            Far far = new Far();
-            Person person = new Person();
+            var far = new Far();
+            var person = new Person();
             person.setEtternavnvedfoedsel(optionalFar.get().getEtternavn());
             person.setFornavn(optionalFar.get().getFornavn());
 
@@ -158,11 +162,11 @@ public interface SedMapper {
         }
 
         Optional<FamilieMedlem> optionalMor = sedData.getFamilieMedlem().stream()
-                .filter(f -> f.getRelasjon().equalsIgnoreCase("MOR")).findFirst();
+            .filter(f -> f.getRelasjon().equalsIgnoreCase("MOR")).findFirst();
 
         if (optionalMor.isPresent()) {
-            Mor mor = new Mor();
-            Person person = new Person();
+            var mor = new Mor();
+            var person = new Person();
             person.setEtternavnvedfoedsel(optionalMor.get().getEtternavn());
             person.setFornavn(optionalMor.get().getFornavn());
 
@@ -176,7 +180,7 @@ public interface SedMapper {
         List<Arbeidssted> arbeidsstedList = Lists.newArrayList();
 
         for (no.nav.melosys.eessi.controller.dto.Arbeidssted arbStd : sedData.getArbeidssteder()) {
-            Arbeidssted arbeidssted = new Arbeidssted();
+            var arbeidssted = new Arbeidssted();
             arbeidssted.setNavn(arbStd.getNavn());
             arbeidssted.setAdresse(hentAdresseFraDtoAdresse(arbStd.getAdresse()));
             arbeidssted.setHjemmebase(landkodeIso2EllerNull(arbStd.getHjemmebase()));
@@ -203,13 +207,13 @@ public interface SedMapper {
 
     default List<Arbeidsgiver> hentArbeidsgiver(List<Virksomhet> virksomheter, Predicate<Virksomhet> virksomhetPredicate) {
         return virksomheter.stream()
-                .filter(virksomhetPredicate)
-                .map(this::hentArbeidsgiver)
-                .collect(Collectors.toList());
+            .filter(virksomhetPredicate)
+            .map(this::hentArbeidsgiver)
+            .toList();
     }
 
     default Arbeidsgiver hentArbeidsgiver(Virksomhet virksomhet) {
-        Arbeidsgiver arbeidsgiver = new Arbeidsgiver();
+        var arbeidsgiver = new Arbeidsgiver();
         arbeidsgiver.setNavn(virksomhet.getNavn());
         arbeidsgiver.setAdresse(hentAdresseFraDtoAdresse(virksomhet.getAdresse()));
         arbeidsgiver.setIdentifikator(lagIdentifikator(virksomhet.getOrgnr()));
@@ -218,11 +222,11 @@ public interface SedMapper {
 
     default Selvstendig hentSelvstendig(SedDataDto sedData) {
 
-        Selvstendig selvstendig = new Selvstendig();
+        var selvstendig = new Selvstendig();
         List<Arbeidsgiver> arbeidsgiverList = Lists.newArrayList();
 
         for (Virksomhet v : sedData.getSelvstendigeVirksomheter()) {
-            Arbeidsgiver arbeidsgiver = new Arbeidsgiver();
+            var arbeidsgiver = new Arbeidsgiver();
 
             arbeidsgiver.setIdentifikator(lagIdentifikator(v.getOrgnr()));
             arbeidsgiver.setAdresse(hentAdresseFraDtoAdresse(v.getAdresse()));
@@ -241,11 +245,11 @@ public interface SedMapper {
     }
 
     default Adresse hentAdresseFraDtoAdresse(no.nav.melosys.eessi.controller.dto.Adresse sAdresse) {
-        Adresse adresse = new Adresse();
+        var adresse = new Adresse();
         adresse.setGate(sAdresse.getGateadresse());
         adresse.setPostnummer(sAdresse.getPostnr());
         adresse.setBy(sAdresse.getPoststed());
-        adresse.setLand(LandkodeMapper.getLandkodeIso2(sAdresse.getLand()));
+        adresse.setLand(LandkodeMapper.mapTilLandkodeIso2(sAdresse.getLand()));
         adresse.setBygning(null);
         adresse.setRegion(sAdresse.getRegion());
 
@@ -261,23 +265,23 @@ public interface SedMapper {
             return Collections.emptyList();
         }
 
-        Identifikator orgNr = new Identifikator();
+        var orgNr = new Identifikator();
         orgNr.setId(orgnr);
         orgNr.setType("registrering");
         return List.of(orgNr);
     }
 
     default Periode mapTilPeriodeDto(Lovvalgsperiode lovvalgsperiode) {
-        Periode periode = new Periode();
+        var periode = new Periode();
 
         if (lovvalgsperiode.getFom() != null) {
             if (lovvalgsperiode.getTom() != null) {
-                Fastperiode fastperiode = new Fastperiode();
+                var fastperiode = new Fastperiode();
                 fastperiode.setStartdato(formaterDato(lovvalgsperiode.getFom()));
                 fastperiode.setSluttdato(formaterDato(lovvalgsperiode.getTom()));
                 periode.setFastperiode(fastperiode);
             } else {
-                AapenPeriode aapenPeriode = new AapenPeriode();
+                var aapenPeriode = new AapenPeriode();
                 aapenPeriode.setStartdato(formaterDato(lovvalgsperiode.getFom()));
                 periode.setAapenperiode(aapenPeriode);
             }
@@ -294,7 +298,7 @@ public interface SedMapper {
         } else if (iso3.length() == 2) {
             return iso3;
         } else {
-            return LandkodeMapper.getLandkodeIso2(iso3);
+            return LandkodeMapper.mapTilLandkodeIso2(iso3);
         }
     }
 }
